--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,1 +1,4 @@
+@import url(./common/root.css);
+@import url(./header/nav-header.css);
+@import url(./header/nav-menu.css);
 @import url(./contact.css);
