--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -5,54 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
-    <title>Contact GPT</title>
+    <title><%= title %> </title>
 </head>
 <body>
-    <header>
-        <!-- phần liên hệ -->
-        <div class="contact-header">
-           <div class="contact-inf"> 
-               <img src="icon/eva_email-fill.svg" alt="">
-               <p>Email: info@gptgroup.net</p>
-              <img src="icon/carbon_phone-voice-filled.svg" alt="">
-            <p>Phone Number: +84 931 869 836</p>
-        </div>
-        <div class="contact-link">     
-            <img src="icon/ant-design_linkedin-filled.svg" alt="">
-            
-            <img src="icon/ant-design_instagram-filled.svg" alt="">
-            
-            <img src="icon/foundation_social-facebook.svg" alt="">
-        </div>
-        </div>
-
-        <!-- Thanh Navigation -->
-        <div id="nav">
-            <div class="logo-nav">
-                <a href="#" class="logo-img">
-                    <img src="img/logo.png" alt="Logo GPT">
-                </a>
-                <h3 class="title-logo">
-                    GPT Group
-                    <br>
-                    <span>MAKE A DIFFERENCE</span>
-    
-                </h3>
-                
-            </div>
-            <nav class="nav-list">
-                <ul class="list-item">
-                    <li><a href="" class="link-item">About us</a></li>
-                    <li><a href="" class="link-item">Products</a></li>
-                    <li><a href="" class="link-item">Customers</a></li>
-                    <li><a href="" class="link-item">Blog</a></li>
-                    <li><a href="" class="link-item">Career</a></li>
-                    <li><a href="" class="link-item">Contact</a></li>
-                </ul>
-            </nav>
-            
-        </div>
-    </header>
     
