--- a/client/views/common/tail.ejs
+++ b/client/views/common/tail.ejs
@@ -13,8 +13,8 @@
         Contact Information
     </h4>
     <p><img src="icon/ci_location.svg" alt=""> <span>Address: <%= address %> </span></p>
-    <p><img src="icon/eva_email-fill.svg" alt=""><span>Email: <%= email %> </span></p>
-    <p><img src="icon/carbon_phone-voice-filled.svg" alt=""> <span>Phone Number: <%= phone %> </span></p>
+    <p><img src="icon/email.svg" alt=""><span>Email: <%= email %> </span></p>
+    <p><img src="icon/phone-voice.svg" alt=""> <span>Phone Number: <%= phone %> </span></p>
     </div>
     <div class="footer-control cotr-3">
         <h4>Menu</h4>
