--- a/client/public/css/header/nav-header.css
+++ b/client/public/css/header/nav-header.css
@@ -1,9 +1,9 @@
 .nav-header {
     background-color: var(--primary-gray);
+    height: 37px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 37px;
     padding: 0 62px;
     color: var(--primary-white);
 }
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.contact-item .contact-icon img {
+    vertical-align: middle;
+}
+
 .header-contact .contact-item:last-child {
     margin-left: 20px;
 }
@@ -26,6 +30,14 @@
     margin-right: 10px;
 }
 
+.nav-header .header-social {
+    display: flex;
+}
+
 .nav-header .header-social .social-icon {
     margin-left: 10px;
+}
+
+.social-icon a img {
+    vertical-align: middle;
 }
