--- a/client/views/common/header/nav-header.ejs
+++ b/client/views/common/header/nav-header.ejs
@@ -11,8 +11,8 @@
     </div>
 
     <div class="header-social">
-        <span class="social-icon"><a href="<%= linkedin %>" target="_blank"><img src="icon/linkedin.svg" alt=""></a></span>
-        <span class="social-icon"><a href="<%= instagram %>" target="_blank"><img src="icon/instagram.svg" alt=""></a></span>
-        <span class="social-icon"><a href="<%= facebook %>" target="_blank"><img src="icon/facebook.svg" alt=""></a></span>
+        <span class="social-icon"><a href="<%= linkedin %>" target="_blank"><img src="icon/linkedin.svg" alt="linkedin gpt group"></a></span>
+        <span class="social-icon"><a href="<%= instagram %>" target="_blank"><img src="icon/instagram.svg" alt="instagram gpt group"></a></span>
+        <span class="social-icon"><a href="<%= facebook %>" target="_blank"><img src="icon/facebook.svg" alt="facebook gpt group"></a></span>
     </div>
 </div>
