--- a/client/views/contact/index.ejs
+++ b/client/views/contact/index.ejs
@@ -9,7 +9,7 @@
         <div class="contact-body">  
             <div class="contact-logo">
                 <img src="img/logo.png" alt="Logo GPT">
-                <h3 class="contact-title">gpt group</h3>
+                <h3 class="contact-name">gpt group</h3>
                 <p>Global Platform Technology</p>
                 <hr>
             </div>
@@ -23,11 +23,11 @@
                     <p><img src="icon/phone-voice.svg" alt=""><span>Phone Number: <%= phone %> </span></p>
         
                     <div class="contact-social">
-                        <a href="<%= linkedin %> " target="_blank"><img src="icon/linkedin.svg" alt=""></a>
+                        <a href="<%= linkedin %> " target="_blank"><img src="icon/linkedin.svg" alt="linkedin gpt group"></a>
                         
-                        <a href="<%= instagram %> " target="_blank"><img src="icon/instagram.svg" alt=""></a>
+                        <a href="<%= instagram %> " target="_blank"><img src="icon/instagram.svg" alt="instagram gpt group"></a>
                             
-                        <a href="<%= facebook %> " target="_blank"><img src="icon/facebook.svg" alt=""></a>
+                        <a href="<%= facebook %> " target="_blank"><img src="icon/facebook.svg" alt="facebook gpt group"></a>
                     </div>
         
                 </div>
@@ -50,4 +50,6 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62689.2123204429!2d106.72277745086177!3d10.881841615938207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317527d968702e0f%3A0x5559d1b4d60cdaf3!2zMjI1LCAzIMSQLiBUYW0gQsOsbmgsIEhp4buHcCBCw6xuaCBDaMOhbmgsIFRo4bunIMSQ4bupYywgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1647347288323!5m2!1sen!2s" width="100%" height="694px" style="border-radius:8px;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </main>
-<%- include('../common/tail.ejs', { address, email, phone }); %>
+
+    <%- include('../common/footer/footer.ejs', { address, email, phone }) %> 
+<%- include('../common/tail.ejs'); %>
