--- a/client/views/contact/index.ejs
+++ b/client/views/contact/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../common/head.ejs', {title: "CONTACT | GPT GROUP"}); -%>
+<%- include('../common/head.ejs', { title: "CONTACT | GPT GROUP", content: "Contacn Information GPT Group", keyword: "contact gpt group, gpt group,gpt", dctitle: "Contact GPT Group"}); -%>
     <%- include('../common/header/header.ejs', {phone, email, linkedin, facebook, instagram}) %> 
     <main id="main">
         <div class="img-cotainer">
