--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -2,4 +2,6 @@
 @import url(./header/nav-header.css);
 @import url(./header/nav-menu.css);
 @import url(./footer/footer.css);
+@import url(./home/home.css);
+@import url(./home/home-menu.css);
 @import url(./contact.css);
