--- a/client/views/common/header/nav-menu.ejs
+++ b/client/views/common/header/nav-menu.ejs
@@ -1,6 +1,6 @@
 <menu class="nav-menu">
     <div class="nav-menu-brand">
-        <div class="logo-brand"><img src="img/logo_header.png" alt="logo gpt group"></div>
+        <div class="logo-brand"><a href="/home"><img src="img/logo_header.png" alt="logo gpt group"></a></div>
         <div class="info-brand">
             <div class="brand-name">GPT GROUP</div>
             <div class="brand-slogan">MAKE A DIFFERENCE</div>
