--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,7 +1,8 @@
 @import url(./common/root.css);
-@import url(./header/nav-header.css);
-@import url(./header/nav-menu.css);
 @import url(./footer/footer.css);
-@import url(./home/home.css);
-@import url(./home/home-menu.css);
-@import url(./contact.css);
+@import url(./customer/customer.css);
+@import url(./contact/contact.css);
+@import url(./gird/gird.css);
+@import url(./aboutUs/aboutUs.css);
+@import url(./contact/contact.css);
+@import url(./header/header.css);
