--- a/client/views/common/header/nav-menu.ejs
+++ b/client/views/common/header/nav-menu.ejs
@@ -7,11 +7,11 @@
         </div>
     </div>
     <div class="menu-list">
-        <span class="menu-item"><a href="">ABOUT US</a></span>
+        <span class="menu-item"><a href="/aboutus">ABOUT US</a></span>
         <span class="menu-item"><a href="">PRODUCTS</a></span>
         <span class="menu-item"><a href="">CUSTOMERS</a></span>
         <span class="menu-item"><a href="">BLOG</a></span>
         <span class="menu-item"><a href="">CAREER</a></span>
-        <span class="menu-item"><a href="">CONTACT</a></span>
+        <span class="menu-item"><a href="/contact">CONTACT</a></span>
     </div>
 </menu>
