--- a/client/public/css/header/nav-header.css
+++ b/client/public/css/header/nav-header.css
@@ -1,11 +1,15 @@
 .nav-header {
-    background-color: var(--primary-gray);
     height: 37px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 62px;
     color: var(--primary-white);
+    transition: 0.2s ease-in-out;
+}
+
+.normal-nav-header {
+    background-color: var(--primary-gray);
 }
 
 .header-contact {
