--- a/client/public/css/common/root.css
+++ b/client/public/css/common/root.css
@@ -9,6 +9,8 @@
     --primary-black: #000000;
     --primary-white: #ffffff;
 
+    --primary-cta: #EB9400;
+
     --gradient-golden: linear-gradient(130.51deg, #FFE600 15.72%, #EB9400 84.94%);
 
     --fontsize-48: 48px;
