--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -6,3 +6,5 @@
 @import url(./aboutUs/aboutUs.css);
 @import url(./contact/contact.css);
 @import url(./header/header.css);
+@import url(./home/home.css);
+@import url(./common/btn.css);
