--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -8,3 +8,4 @@
 @import url(./header/header.css);
 @import url(./home/home.css);
 @import url(./common/btn.css);
+@import url(./pageError/pageError.css);
