about us, customer

--- a/client/public/css/aboutUs/aboutUs-description.css
+++ b/client/public/css/aboutUs/aboutUs-description.css
@@ -20,7 +20,8 @@
     font-size: 24px;
 }
 .image-2{
-    background-image: url('../../img/aboutUs-2.png');
+    max-width: 1763px;
+    background-image: url('/img/aboutUs-2.png');
     height: 833px;
     background-size: cover;
     border-radius: 15px;
