--- a/client/views/aboutUs/aboutUs-body/our-department.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-department.ejs
@@ -3,74 +3,86 @@
     <div class="row">
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-humanResources.png" alt="" class="card-department-img">
-                <div class="card-department-name">Human Resouces</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-humanResources.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Human Resouces</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>
             </div>
         </div>
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-marketTing.png" alt="" class="card-department-img">
-                <div class="card-department-name">Marketing & Sale</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-marketTing.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Marketing & Sale</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>
             </div>
         </div>
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-IT.png" alt="" class="card-department-img">
-                <div class="card-department-name">Information Technology</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-IT.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Information Technology</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>
             </div>
         </div>
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-design.png" alt="" class="card-department-img">
-                <div class="card-department-name">Desgin</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-design.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Desgin</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>
             </div>
         </div>
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-CusSer.png" alt="" class="card-department-img">
-                <div class="card-department-name">Customer Services</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-CusSer.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Customer Services</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>
             </div>
         </div>
         <div class="col l-6">
             <div class="card-department">
-                <img src="img/aboutUs-sp.png" alt="" class="card-department-img">
-                <div class="card-department-name">Support</div>
-                <p class="card-department-desctiption">
-                    Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
-                    Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
-                    Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
-                    Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
-                </p>
+                <a href="#">
+                    <img src="img/aboutUs-sp.png" alt="" class="card-department-img">
+                    <div class="card-department-name">Support</div>
+                    <p class="card-department-desctiption">
+                        Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
+                        Pellentesque vitae tellus non dui fermentum hendrerit. In vel imperdiet mi. 
+                        Aliquam erat volutpat. Cras dapibus orci eu eros tempus efficitur. Nulla rhoncus arcu nec dictum condimentum. 
+                        Aenean sapien leo, maximus nec magna vel, gravida auctor quam. Cras congue massa massa, id luctus elit ultricies at.
+                    </p>
+                </a>  
             </div>
         </div>
     </div>
