--- a/client/views/aboutUs/aboutUs-body/our-leader.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-leader.ejs
@@ -10,7 +10,7 @@
                     <p>
                         7 YEARS CISO | GOOGLE <br>
                         6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO – IT | VINGROUP & CEO I VINTECH
+                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
                     </p>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                     <p>
                         7 YEARS CISO | GOOGLE <br>
                         6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO – IT | VINGROUP & CEO I VINTECH
+                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
                     </p>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <p>
                         7 YEARS CISO | GOOGLE <br>
                         6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO – IT | VINGROUP & CEO I VINTECH
+                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
                     </p>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <p>
                         7 YEARS CISO | GOOGLE <br>
                         6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO – IT | VINGROUP & CEO I VINTECH
+                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
                     </p>
                 </div>
             </div>
