--- a/client/views/aboutUs/index.ejs
+++ b/client/views/aboutUs/index.ejs
@@ -1,5 +1,5 @@
-<%- include('../common/head.ejs', {title: "ABOUT US | GPT GROUP", keyword: "GPT group, GPT", content: "about GPT Group"})  %>
-    <%- include('../common/header/header.ejs', contact) %>
-        <%- include('./aboutUs-body/aboutUs-body.ejs', aboutUs) %> 
-    <%- include('../common/footer/footer.ejs', contact) %>
+<%- include('../common/head.ejs',{title: "GPT GROUP | ABOUT US", content: "ABOUT GPT GROUP", keyword: "GPT Group, GPT, gpt group, gpt"})  %>
+    <%- include('../common/header/header.ejs',contact) %>
+        <%- include('./aboutUs-body/aboutUs-body.ejs') %> 
+    <%- include('../common/footer/footer.ejs',contact) %>
 <%- include('../common/tail.ejs') %>  
