--- a/client/views/common/footer/footer-menu.ejs
+++ b/client/views/common/footer/footer-menu.ejs
@@ -2,7 +2,7 @@
     <div class="menu-title"><h4>Menu</h4></div>
     <div class="menu-item"><a href="/aboutus" rel="noopener noreferrer">About us</a></div>
     <div class="menu-item"><a href="#" rel="noopener noreferrer">Products</a></div>
-    <div class="menu-item"><a href="#" rel="noopener noreferrer">Customers</a></div>
+    <div class="menu-item"><a href="/customer" rel="noopener noreferrer">Customers</a></div>
     <div class="menu-item"><a href="#" rel="noopener noreferrer">Blog</a></div>
     <div class="menu-item"><a href="#" rel="noopener noreferrer">Career</a></div>
     <div class="menu-item"><a href="/contact" rel="noopener noreferrer">Contact</a></div>
