--- a/client/views/home/home-body/home-des-slogan.ejs
+++ b/client/views/home/home-body/home-des-slogan.ejs
@@ -7,7 +7,7 @@
         </div>
         <div class="col l-1"></div>
         <div class="home-des-content col l-4" data-aos="fade-left">
-            <div class="des-slogan-title">MAKE A DIFERENCE</div>
+            <h1 class="des-slogan-title">MAKE A DIFERENCE</h1>
             <div class="des-slogan-content">Pellentesque suscipit fringilla libero eu ullamcorper. Cras risus eros, faucibus sit amet augue id, 
                 tempus pellentesque eros. In imperdiet tristique tincidunt. Integer lobortis lorem lorem, id accumsan arcu tempor id. Suspendisse
                 vitae accumsan massa. Duis porttitor, mauris et faucibus sollicitudin, tellus sem tristique risus, nec gravida velit diam aliquet
