--- a/client/views/home/home-body/home-news.ejs
+++ b/client/views/home/home-body/home-news.ejs
@@ -1,6 +1,6 @@
 <div class="home-news">
     <div class="home-news-intro">
-        <div class="news-intro-title">WHAT'S NEW FROM US</div>
+        <h1 class="news-intro-title">WHAT'S NEW FROM US</h1>
         <div class="news-intro-description">Update news  from us every day</div>
     </div>
     <div class="home-card-news">
