--- a/client/views/home/home-body/home-product.ejs
+++ b/client/views/home/home-body/home-product.ejs
@@ -1,5 +1,5 @@
 <div class="home-product">
-    <div class="home-product-title">EXPLORE OUR PRODUCTS</div>
+    <h1 class="home-product-title">EXPLORE OUR PRODUCTS</h1>
     <div class="home-product-description">Below are the 3 main product groups that we provide, please read more to understand better</div>
     <div class="products">
         <div class="card-home-product">
