--- a/client/views/home/home-body/home-project.ejs
+++ b/client/views/home/home-body/home-project.ejs
@@ -2,7 +2,7 @@
     <div class="home-project row">
         <div class="projects col l-4">
             <div class="home-project-content">
-                <div class="project-content-title">FEATURED PROJECTS</div>
+                <h1 class="project-content-title">FEATURED PROJECTS</h1>
                 <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
             </div>
 
