--- a/client/views/aboutUs/aboutUs-body/our-leader.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-leader.ejs
@@ -1,61 +1,19 @@
 <div class="gird">
     <h1 class="category-aboutUs">OUR LEADER</h2>
     <div class="row">
-        <div class="col l-3">
-            <div class="card">
-                <img src="img/aboutUs-leader_img.png" alt="" class="card-img">
-                <div class="card-name">TEDDY NGUYEN</div>
-                <div class="card-work">FOUNDER - CEO</div>
-                <div class="card-description">
-                    <p>
-                        7 YEARS CISO | GOOGLE <br>
-                        6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
-                    </p>
+        <% for(let i = 0; i < personnels.length; i++) { %>
+            <div class="col l-3">
+                <div class="card">
+                    <img src="<%= personnels[i].img %> " alt="" class="card-img">
+                    <div class="card-name"><%= personnels[i].name %> </div>
+                    <div class="card-work"><%= personnels[i].position %> </div>
+                    <div class="card-description">
+                        <p>
+                            <%= personnels[i].bio %> 
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col l-3">
-            <div class="card">
-                <img src="img/aboutUs-leader_img.png" alt="" class="card-img">
-                <div class="card-name">TEDDY NGUYEN</div>
-                <div class="card-work">FOUNDER - CEO</div>
-                <div class="card-description">
-                    <p>
-                        7 YEARS CISO | GOOGLE <br>
-                        6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col l-3">
-            <div class="card">
-                <img src="img/aboutUs-leader_img.png" alt="" class="card-img">
-                <div class="card-name">TEDDY NGUYEN</div>
-                <div class="card-work">FOUNDER - CEO</div>
-                <div class="card-description">
-                    <p>
-                        7 YEARS CISO | GOOGLE <br>
-                        6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col l-3">
-            <div class="card">
-                <img src="img/aboutUs-leader_img.png" alt="" class="card-img">
-                <div class="card-name">TEDDY NGUYEN</div>
-                <div class="card-work">FOUNDER - CEO</div>
-                <div class="card-description">
-                    <p>
-                        7 YEARS CISO | GOOGLE <br>
-                        6 YEARS D.CEO - IT | SINGTEL<br>
-                        2 YEARS D.CEO - IT | VINGROUP & CEO I VINTECH
-                    </p>
-                </div>
-            </div>
-        </div>
+        <% } %> 
     </div>
 </div>
