--- a/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
@@ -1,7 +1,7 @@
 <%- include('./aboutUs-contact-img.ejs') %> 
 <div class="container">
-    <%- include('./description.ejs', {aboutUs}) %> 
-    <%- include('./our-leader.ejs', {personnels}) %> 
+    <%- include('./description.ejs') %> 
+    <%- include('./our-leader.ejs', personnels) %> 
     <%- include('./our-department.ejs') %> 
     <%- include('./our-product.ejs') %>  
     <%- include('./aboutUs-contact.ejs') %>  
