--- a/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
@@ -1,6 +1,6 @@
 <div class="gird">
-    <div class="row">
-        <div class="col l-12">
+    <div class="row-contact">
+        <div class="">
             <div class="card-contact">
                 <div class="card-contact-title">
                     Please contact us immediately for detailed advice or information support about the product you are interested in
