--- a/client/views/customer/customer-body/featured-partner.ejs
+++ b/client/views/customer/customer-body/featured-partner.ejs
@@ -1,27 +1,19 @@
 <div class="gird">
     <h1 class="category-cus">FEATURED PARTNER</h1>
-    <div class="row">
-
-        <div class="col l-3">
-            <div class="featured-item">
-                <p> </p>
-            </div>
+    <div class="row-protential">
+        <div class="card-partner">
+            <img src="img/customer-img-partner.png" alt="" class="partner-img">
         </div>
-        <div class="col l-3">
-            <div class="featured-item">
-                <p> </p>
-            </div>
+        <div class="card-partner">
+            <img src="img/customer-img-partner.png" alt="" class="partner-img">
         </div>
-        <div class="col l-3">
-            <div class="featured-item">
-                <p> </p>
-            </div>
+        <div class="card-partner">
+            <img src="img/customer-img-partner.png" alt="" class="partner-img">
         </div>
-        <div class="col l-3">
-            <div class="featured-item">
-                <p></p>
-            </div>
+        <div class="card-partner">
+            <img src="img/customer-img-partner.png" alt="" class="partner-img">
         </div>
+        
         
     </div>
 </div>
