--- a/client/public/css/aboutUs/aboutUs-description.css
+++ b/client/public/css/aboutUs/aboutUs-description.css
@@ -21,7 +21,7 @@
 }
 .image-2{
     max-width: 1763px;
-    background-image: url('/img/aboutUs-2.png');
+    background-image: url('../../img/aboutUs-2.png');
     height: 833px;
     background-size: cover;
     border-radius: 15px;
