--- a/client/public/css/aboutUs/aboutUs-our-leader.css
+++ b/client/public/css/aboutUs/aboutUs-our-leader.css
@@ -1,14 +1,23 @@
+.row-leader{
+    max-width: 1920px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+    minmax(430px,1fr));
+    place-items: center center;
+}
 .card{
+    /* min-width: 425px; */
     max-width: 425px;
     height: 620px;
     max-height: 620px;
     min-height: 610px;
-    background-color: #ffffff;
+    background-color: white;
     border-radius: 15px;
-    padding: 12px;
+    margin: 10px 18px;
 }
 .card-img{
     border-radius: 15px;
+    padding: 7px;
     width: 100%;
 }
 .card-name{
@@ -30,7 +39,9 @@
     font-size: 24px;
     line-height:36px;
 }
-.catgory-aboutUs .card-description{
+.category-aboutUs .card-description{
     display: flex;
     justify-content: center;
+    max-height: 100px;
+    padding: 24px;
 }
