--- a/client/public/css/customer/customer.css
+++ b/client/public/css/customer/customer.css
@@ -4,6 +4,18 @@
 body{   
     margin: 0;
 }
+.row-protential{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+    minmax(430px,1fr));
+    place-items: center center;
+}
+.row-3{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+    minmax(583px,1fr));
+    place-items: center center;
+}
 .container{
     max-width: 1920px;
     background-color:black ;
@@ -24,6 +36,7 @@ body{
     max-height: 430px;
     min-height: 430px;
     background-color: white;
+    margin: 15px 10px;
 }
 .card-customer-img{
     width: 100%;
@@ -40,40 +53,44 @@ body{
     justify-content: center;
     align-items: center;
 }
-.featured-item{
-    max-width: 430px;
-    max-height: 210px;
-    min-height: 210px;
-    border-radius: 15px;
+.partner-img{
     width: 100%;
+}
+.card-partner{
+    max-width: 430px;
+    border-radius: 12px;
     align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 210px;
-    background-image: url('/img/customer-img-partner.png');
+    height: 200px;
+    max-height: 200px;
+    min-height: 200px;
+    background-color: white;
+    margin: 15px 10px;
 }
 .card-said{
-    display: flex;
-    flex-direction: column;
     max-width: 585px;
     align-items: center;
     height: 310px;
     max-height: 310px;
+    min-height: 310px;
     background-color: white;
     border-radius: 15px;
     padding: 29px;
+    margin: 15px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .card-infomation{
-    padding-top: 29px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.category-cus .card-description{
+.card-said .card-description{
     font-family: 'Poppins';
     font-style: italic;
     font-weight: 500;
     font-size: 16px;
+    line-height: 24px;
 }
 .avt{
     width: 82px;
