--- a/client/views/aboutUs/aboutUs-body/our-leader.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-leader.ejs
@@ -1,17 +1,15 @@
 <div class="gird">
     <h1 class="category-aboutUs">OUR LEADER</h2>
-    <div class="row">
+    <div class="row-leader">
         <% for(let i = 0; i < personnels.length; i++) { %>
-            <div class="col l-3">
-                <div class="card">
-                    <img src="<%= personnels[i].img %> " alt="" class="card-img">
-                    <div class="card-name"><%= personnels[i].name %> </div>
-                    <div class="card-work"><%= personnels[i].position %> </div>
-                    <div class="card-description">
-                        <p>
-                            <%= personnels[i].bio %> 
-                        </p>
-                    </div>
+            <div class="card">
+                <img src="<%= personnels[i].img %> " alt="" class="card-img">
+                <div class="card-name"><%= personnels[i].name %> </div>
+                <div class="card-work"><%= personnels[i].position %> </div>
+                <div class="card-description">
+                    <p>
+                        <%= personnels[i].bio %> 
+                    </p>
                 </div>
             </div>
         <% } %> 
