--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -1,19 +1,19 @@
 <div class="gird">
-    <h1 class="category-aboutUs">OUR PRODUCTS</h1>
-    <div class="row">
-        <div class="col l-4">
+    <h1 class="category-aboutUs">OUR PRODUCTS</h2>
+    <div class="row-product">
+        <div class="">
             <div class="card-product">
                 <img src="img/aboutUs-CyberSecu.png" alt="" class="card-product-img">
                 <div class="card-product-name">CyberSecurity</div>
             </div>
         </div>
-        <div class="col l-4">
+        <div class="">
             <div class="card-product">
                 <img src="img/aboutUs-DT.png" alt="" class="card-product-img">
                 <div class="card-product-name">Digital Transformation </div>
             </div>
         </div>
-        <div class="col l-4">
+        <div class="">
             <div class="card-product">
                 <img src="img/aboutUs-Digital.png" alt="" class="card-product-img">
                 <div class="card-product-name">Software</div>
