--- a/client/views/customer/customer-body/customer-said.ejs
+++ b/client/views/customer/customer-body/customer-said.ejs
@@ -1,7 +1,7 @@
 <div class="gird">
-    <h1 class="category-cus">WHAT CUSTOMERS SAID</h1>
-    <div class="row">
-        <div class="col l-4">
+    <h1 class="category-cus">WHAT CUSTOMERS SAID</h2>
+    <div class="row-3">
+        <div class="">
             <div class="card-said">
                 <p class="card-description">“Donec a eros justo. Fusce egestas tristique ultrices. 
                     Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. 
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-4">
+        <div class="">
             <div class="card-said">
                 <p class="card-description">“Donec a eros justo. Fusce egestas tristique ultrices. 
                     Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. 
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-4">
+        <div class="">
             <div class="card-said">
                 <p class="card-description">“Donec a eros justo. Fusce egestas tristique ultrices. 
                     Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. 
