--- a/client/views/customer/customer-body/protential-customers.ejs
+++ b/client/views/customer/customer-body/protential-customers.ejs
@@ -1,7 +1,7 @@
 <div class="grid">
     <h1 class="category-cus">PROTENTIAL CUSTOMERS</h1>
-    <div class="row">
-        <div class="col l-3">
+    <div class="row-protential">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -9,7 +9,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="col l-3">
+        <div class="">
             <div class="card-customer">
                 <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
                 <div class="card-customer-name">
