--- a/client/views/customer/index.ejs
+++ b/client/views/customer/index.ejs
@@ -1,5 +1,5 @@
-<%- include('../common/head.ejs', {title: "GPT Group | Customer", content: "Customer of GPT", keyword: "GPT, gpt, GPT Group, gpt group, customer of gpt group" }) %>
+<%- include('../common/head.ejs', {title: "GPT Group | Customer", content: "customer of GPT Group", keyword: "GPT, GPT Group, customer gpt"}) %>
     <%- include('../common/header/header.ejs', contact) %> 
         <%- include('./customer-body/customer-body.ejs') %> 
-    <%- include('../common/footer/footer.ejs', contact) %> 
+    <%- include('../common/footer/footer.ejs',contact) %> 
 <%- include('../common/tail.ejs') %> 
