--- a/client/public/css/home/home-product/card-home-product.css
+++ b/client/public/css/home/home-product/card-home-product.css
@@ -1,15 +1,20 @@
 .home-product .card-home-product{
     background: var(--primary-white);
-    max-width: 569px;
-    height: 693px;
+    width: 350px;
     border-radius: 12px;
     padding: 28px;
     box-sizing: border-box;
+    margin: 20px;
+}
+
+.home-product .card-home-product img{
+    width: 350px;
+    height: auto;
 }
 
 .home-product .products {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .home-product a {
