--- a/client/views/home/home-body/home-des-slogan.ejs
+++ b/client/views/home/home-body/home-des-slogan.ejs
@@ -1,18 +1,15 @@
-<div class="grid">
-    <div id="home-des-slogan" class="row">
-        <div class="home-des-image col l-6">
-            <div class="des-img" data-aos="fade-right">
-                <img src="img/des-slogan-img.jpg" alt="">
-            </div>
+<div id="home-des-slogan">
+    <div class="home-des-image">
+        <div class="des-img" data-aos="fade-right">
+            <img src="img/des-slogan-img.jpg" alt="">
         </div>
-        <div class="col l-1"></div>
-        <div class="home-des-content col l-4" data-aos="fade-left">
-            <h1 class="des-slogan-title">MAKE A DIFERENCE</h1>
-            <div class="des-slogan-content">Pellentesque suscipit fringilla libero eu ullamcorper. Cras risus eros, faucibus sit amet augue id, 
-                tempus pellentesque eros. In imperdiet tristique tincidunt. Integer lobortis lorem lorem, id accumsan arcu tempor id. Suspendisse
-                vitae accumsan massa. Duis porttitor, mauris et faucibus sollicitudin, tellus sem tristique risus, nec gravida velit diam aliquet
-                enim. Curabitur eleifend ligula quis convallis interdum. Sed vitae condimentum urna, nec suscipit purus.</div>
-            <div class="des-slogan-action btn btn-cta"><a href="#">SEE MORE</a></div>
-        </div>
+    </div>
+    <div class="home-des-content" data-aos="fade-left">
+        <h1 class="des-slogan-title">MAKE A DIFERENCE</h1>
+        <div class="des-slogan-content">Pellentesque suscipit fringilla libero eu ullamcorper. Cras risus eros, faucibus sit amet augue id, 
+            tempus pellentesque eros. In imperdiet tristique tincidunt. Integer lobortis lorem lorem, id accumsan arcu tempor id. Suspendisse
+            vitae accumsan massa. Duis porttitor, mauris et faucibus sollicitudin, tellus sem tristique risus, nec gravida velit diam aliquet
+            enim. Curabitur eleifend ligula quis convallis interdum. Sed vitae condimentum urna, nec suscipit purus.</div>
+        <div class="des-slogan-action btn btn-cta"><a href="#">SEE MORE</a></div>
     </div>
 </div>
