--- a/client/views/home/home-body/home-project.ejs
+++ b/client/views/home/home-body/home-project.ejs
@@ -1,11 +1,11 @@
-<div class="grid">
-    <div class="home-project row">
-        <div class="projects col l-4">
+<div class="home-project">
+    <h1 class="project-content-title">FEATURED PROJECTS</h1>
+    <div class="projects">
+        <div class="projects-card">
             <div class="home-project-content">
-                <h1 class="project-content-title">FEATURED PROJECTS</h1>
+                
                 <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
             </div>
-
             <div class="home-project-card card-cover" data-aos="fade-up">
                 <a href="#">
                     <div class="project-card-img"><img src="img/demo-home-project-cover.jpg" alt=""></div>
@@ -19,7 +19,7 @@
                 </a>
             </div>
         </div>
-        <div class="projects col l-4">
+        <div class="projects-card">
             <div class="home-project-card" data-aos="fade-up">
                 <a href="#">
                     <div class="project-card-img"><img src="img/demo-home-project.jpg" alt=""></div>
@@ -39,7 +39,7 @@
                 </a>
             </div>
         </div>
-        <div class="projects col l-4">
+        <div class="projects-card">
             <div class="home-project-card" data-aos="fade-up">
                 <a href="#">
                     <div class="project-card-img"><img src="img/demo-home-project.jpg" alt=""></div>
@@ -60,4 +60,5 @@
             </div>
         </div>
     </div>
+    
 </div>
